--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: blue;
+    background-color: black;
+    color: white;
 } 
   .some-heading {
     box-sizing: border-box;
